// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle-stale-action exits success on a successful run 1`] = `
Array [
  Array [
    "Done with mark and sweep!",
  ],
]
`;

exports[`handle-stale-action supports the schedule event 1`] = `
Array [
  Array [
    "Done with mark and sweep!",
  ],
]
`;

exports[`handle-stale-action unmarks on new issue comments 1`] = `
Array [
  Array [
    Object {
      "message": "octo-org/octo-repo#123 was unmarked.",
      "prefix": "[Stale]",
    },
  ],
]
`;

exports[`handle-stale-action works with pull requests as well 1`] = `
Array [
  Array [
    Object {
      "message": "octo-org/octo-repo#234 was unmarked.",
      "prefix": "[Stale]",
    },
  ],
]
`;
